--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <title>TechCo Marketplace</title>
 </head>
 <body>
-  <h1>Welcome to TechCo</h1>
+  <h1>Welcome to TechCo!</h1>
   <p>This is the frontend.</p>
 </body>
 </html>
