--- a/public/index.html
+++ b/public/index.html
@@ -908,7 +908,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2025 TechCo. All Rights Reserved.</p>
+                <p>&copy; 2024-2025 TechCo. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
