--- a/public/index.html
+++ b/public/index.html
@@ -666,7 +666,7 @@
                     <h2>Innovative <span>Technology</span> Solutions for Your Business</h2>
                     <p>TechCo helps businesses transform through cutting-edge technology solutions. We deliver innovative software, cloud services, and digital transformation strategies to drive your success.</p>
                     <div class="hero-buttons">
-                        <a href="#services" class="btn">Explore Services</a>
+                        <a href="#services" class="btn">Explore Our Services</a>
                         <a href="#contact" class="btn btn-outline">Contact Us</a>
                     </div>
                 </div>
