--- a/public/index.html
+++ b/public/index.html
@@ -681,7 +681,7 @@
     <section class="services" id="services">
         <div class="container">
             <div class="section-title">
-                <h2>Our Provided Services in 2025</h2>
+                <h2>Our Services</h2>
                 <p>We provide comprehensive technology solutions to help your business thrive in the digital age.</p>
             </div>
             <div class="services-grid">
@@ -723,7 +723,7 @@
     <section class="about" id="about">
         <div class="container">
             <div class="section-title">
-                <h2>About TechCo</h2>
+                <h2>About Us</h2>
                 <p>Learn about our mission, vision, and the values that drive us forward.</p>
             </div>
             <div class="about-content">
